Spacing fix to places.

--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,3 +3,7 @@
 	line-height: 26px;
 	margin: 0 0 24px 0; 
 }
+
+.place__paragraph:last-child {
+	margin-bottom: 0;
+}
