--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,4 @@
 .places {
 	/* grid styles go here */
+	margin-bottom: -48px;
 }
